GloablServices/keshavglobal/force-app/main/default/objects/Exeception_log__c/Exeception_log__c.object-meta.xml
<CustomObject>
    <description>Capture the Exceptions</description>
    <label>Exception log</label>
    <nameField>
        <displayFormat>Ex-{0000}</displayFormat>
        <label>name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>