GloablServices/keshavglobal/force-app/main/default/objects/Exeception_log__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>ClassName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>