GloablServices/keshavglobal/force-app/main/default/objects/Exeception_log__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <label>MethodName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>