GloablServices/keshavglobal/force-app/main/default/objects/Exeception_log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>