GloablServices/keshavglobal/force-app/main/default/objects/Exeception_log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>200</length>
    <type>Text</type>
</CustomField>