GloablServices/keshavglobal/force-app/main/default/objects/Exeception_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Type__c</columns>
    <columns>MethodName__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>